fix: header width and header nav-links text-overflow fixed

--- a/src/blocks/header/__main-panel/header__main-panel.css
+++ b/src/blocks/header/__main-panel/header__main-panel.css
@@ -2,4 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #000d26;
+  position: fixed;
+  width: 100vw;
+  padding: 0 165px;
+  box-sizing: border-box;
 }
