--- a/src/blocks/header/__nav-link/header__nav-link.css
+++ b/src/blocks/header/__nav-link/header__nav-link.css
@@ -4,11 +4,14 @@
   font-size: 14px;
   line-height: 19px;
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   display: block;
   width: 100px;
-  height: 44px;
-  display: grid;
-  align-items: center;
+  max-height: 44px;
+  padding: 12.5px 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -17,5 +20,6 @@
   font-weight: 600;
   line-height: 24px;
   letter-spacing: 0.1px;
+  padding: 10px 0;
   border-bottom: 2px solid #009fac;
 }
