--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,7 @@
 .header {
-  max-width: 1440px;
+  width: 100vw;
   min-width: 320px;
-  background-color: #000d26;
+  min-height: 80px;
   margin: 0;
-  padding: 0 165px;
   box-sizing: border-box;
 }
