--- a/src/blocks/home/home.css
+++ b/src/blocks/home/home.css
@@ -4,7 +4,8 @@
   background-color: #001337;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   max-width: 1440px;
   min-width: 320px;
   max-height: 100vh;
